syntax = "proto3";
option java_package = "generated.smartenergy.control";

service EnergyControlService {
    // Simple RPC
    rpc ControlDevice(DeviceControlRequest) returns (ControlResponse);
    
    // Client-side streaming RPC
    rpc BatchControlDevices(stream DeviceControlRequest) returns (BatchControlResponse);
    
    // Simple RPC
    rpc GetDeviceStatus(StatusRequest) returns (DeviceStatus);
}

message DeviceControlRequest {
    string device_id = 1;
    bool turn_on = 2;
    string reason = 3;
}

message StatusRequest {
    string device_id = 1;
}

message ControlResponse {
    bool success = 1;
    string device_id = 2;
    string current_state = 3;
    double power_saved_watts = 4;
    string message = 5;
}

message BatchControlResponse {
    int32 devices_controlled = 1;
    double total_power_saved = 2;
    bool all_successful = 3;
}

message DeviceStatus {
    string device_id = 1;
    string device_type = 2;
    bool is_active = 3;
    double current_power_watts = 4;
    int64 last_updated = 5;
}